--- a/semcore/color-picker/package.json
+++ b/semcore/color-picker/package.json
@@ -19,6 +19,7 @@
     "@semcore/flex-box": "^4",
     "@semcore/icon": "^2.19.3",
     "@semcore/input": "^3.0.0",
+    "@semcore/neighbor-location": "^2",
     "@semcore/popper": "^4",
     "@semcore/utils": "^3.15"
   },
