--- a/semcore/breadcrumbs/package.json
+++ b/semcore/breadcrumbs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/breadcrumbs",
-  "description": "SEMRush Breadcrumbs Component",
+  "description": "Semrush Breadcrumbs Component",
   "version": "3.0.10",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
