--- a/semcore/notice/package.json
+++ b/semcore/notice/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/notice",
-  "description": "SEMRush Notice Component",
+  "description": "Semrush Notice Component",
   "version": "4.1.7",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
