--- a/semcore/animation/package.json
+++ b/semcore/animation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/animation",
-  "description": "SEMRush Animation Component",
+  "description": "Semrush Animation Component",
   "version": "1.5.6",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
