--- a/semcore/button/package.json
+++ b/semcore/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/button",
-  "description": "SEMRush Button Component",
+  "description": "Semrush Button Component",
   "version": "4.0.10",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
