--- a/semcore/chart/package.json
+++ b/semcore/chart/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/chart",
-  "description": "SEMRush Chart Component",
+  "description": "Semrush Chart Component",
   "version": "5.1.2",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
