--- a/semcore/counter/package.json
+++ b/semcore/counter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/counter",
-  "description": "SEMRush Counter Component",
+  "description": "Semrush Counter Component",
   "version": "2.0.5",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
