--- a/semcore/data-table/package.json
+++ b/semcore/data-table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/data-table",
-  "description": "SEMRush DataTable Component",
+  "description": "Semrush DataTable Component",
   "version": "3.1.3",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
