--- a/semcore/errors/package.json
+++ b/semcore/errors/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/errors",
-  "description": "SEMRush Errors Component",
+  "description": "Semrush Errors Component",
   "version": "3.1.3",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
