--- a/semcore/format-text/package.json
+++ b/semcore/format-text/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/format-text",
-  "description": "SEMRush FormatText Component",
+  "description": "Semrush FormatText Component",
   "version": "3.0.6",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
