--- a/semcore/inline-edit/package.json
+++ b/semcore/inline-edit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/inline-edit",
-  "description": "SEMRush Input Component",
+  "description": "Semrush Input Component",
   "version": "2.0.5",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
