--- a/semcore/notice-global/package.json
+++ b/semcore/notice-global/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/notice-global",
-  "description": "SEMRush NoticeGlobal Component",
+  "description": "Semrush NoticeGlobal Component",
   "version": "1.1.5",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
