--- a/semcore/pills/package.json
+++ b/semcore/pills/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/pills",
-  "description": "SEMRush Pills Component",
+  "description": "Semrush Pills Component",
   "version": "4.1.3",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
