--- a/semcore/scroll-area/package.json
+++ b/semcore/scroll-area/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/scroll-area",
-  "description": "SEMRush ScrollArea Component",
+  "description": "Semrush ScrollArea Component",
   "version": "4.0.6",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
