--- a/semcore/select/package.json
+++ b/semcore/select/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/select",
-  "description": "SEMRush Select Component",
+  "description": "Semrush Select Component",
   "version": "3.0.18",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
