--- a/semcore/spin/package.json
+++ b/semcore/spin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/spin",
-  "description": "SEMRush Spin Component",
+  "description": "Semrush Spin Component",
   "version": "4.0.6",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
