--- a/semcore/table/package.json
+++ b/semcore/table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/table",
-  "description": "SEMRush Table Component",
+  "description": "Semrush Table Component",
   "version": "3.0.10",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
