--- a/semcore/textarea/package.json
+++ b/semcore/textarea/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/textarea",
-  "description": "SEMRush Textarea Component",
+  "description": "Semrush Textarea Component",
   "version": "4.0.6",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
