--- a/semcore/time-picker/package.json
+++ b/semcore/time-picker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/time-picker",
-  "description": "SEMRush TimePicker Component",
+  "description": "Semrush TimePicker Component",
   "version": "3.0.19",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
