--- a/semcore/typography/package.json
+++ b/semcore/typography/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/typography",
-  "description": "SEMRush Typography Component",
+  "description": "Semrush Typography Component",
   "version": "4.0.11",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
