--- a/semcore/wizard/package.json
+++ b/semcore/wizard/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semcore/wizard",
-  "description": "SEMRush Wizard Component",
+  "description": "Semrush Wizard Component",
   "version": "1.0.4",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
