--- a/tools/gcs-upload/package.json
+++ b/tools/gcs-upload/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "package for uploading files to semrush.static",
   "main": "index.ts",
-  "author": "SEMRush team",
+  "author": "Semrush team",
   "bin": {
     "gcs-upload": "./bin/index.ts"
   },
