[global] explicited @semcore/builder call
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/semcore/counter/package.json
+++ b/semcore/counter/package.json
@@ -9,7 +9,7 @@
   "sideEffects": false,
   "license": "MIT",
   "scripts": {
-    "build": "build --source=js",
+    "build": "pnpm semcore-builder--source=js",
     "test": "jest"
   },
   "dependencies": {
