--- a/semcore/widget-empty/package.json
+++ b/semcore/widget-empty/package.json
@@ -9,8 +9,9 @@
   "author": "UI-kit team <ui-kit-team@semrush.com>",
   "license": "MIT",
   "scripts": {
-    "build": "build --source=js",
-    "test": "jest"
+    "build": "pnpm semcore-builder--source=js",
+    "test": "jest",
+    "upload-static": "gcs-upload svg/*.svg"
   },
   "dependencies": {
     "@semcore/flex-box": "^4",
