[global] fixed @semcore/builder call
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prettier:fix": "pretty-quick --staged --ignore-path=./.prettierignore",
     "publish:website": "tsm --require=./.ci/tsm-filter-warnings.js ./.ci/trigger-website-publish.ts",
     "prepare": "husky install",
-    "semcore-builder": "tsm --require=./.ci/tsm-filter-warnings.js ./tools/builder/bin/index.ts",
+    "postinstall": "pnpm --filter @semcore/ui run clear",
     "i18n:submit": "pnpm crowdin upload",
     "i18n:status": "pnpm crowdin status",
     "i18n:download": "pnpm crowdin download && tsm --require=./.ci/tsm-filter-warnings.js .ci/i18n-csv-2-json.ts"
@@ -32,7 +32,15 @@
     "@crowdin/cli": "3.7.9",
     "@guidepup/playwright": "0.6.1",
     "@mailchimp/mailchimp_marketing": "3.0.30",
-    "@playwright/test": "1.25.1",
+    "@semcore/babel-plugin-recharts": "workspace:*",
+    "@semcore/babel-plugin-root": "workspace:*",
+    "@semcore/babel-plugin-shadow": "workspace:*",
+    "@semcore/babel-plugin-styles": "workspace:*",
+    "@semcore/babel-preset-ui": "workspace:*",
+    "@semcore/builder": "workspace:*",
+    "@semcore/core": "workspace:*",
+    "@semcore/d3-chart": "workspace:*",
+    "@semcore/jest-preset-ui": "workspace:*",
     "@semcore/theme-redesign": "1.5.12",
     "@types/jest": "29.0.0",
     "@typescript-eslint/eslint-plugin": "5.10.2",
@@ -58,6 +66,8 @@
     "playwright": "1.25.1",
     "prettier": "2.6.2",
     "pretty-quick": "1.11.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "tsm": "2.2.2",
     "typescript": "4.5.5",
     "typescript-plugin-css-modules": "2.2.0",
