--- a/semcore/utils/package.json
+++ b/semcore/utils/package.json
@@ -7,12 +7,14 @@
   "author": "UI-kit team <ui-kit-team@semrush.com>",
   "license": "MIT",
   "scripts": {
-    "build": "pnpm semcore-builder--modules=cjs",
+    "build": "pnpm semcore-builder --modules=cjs",
     "test": "jest"
   },
   "devDependencies": {
+    "@semcore/babel-plugin-react-semcore": "^4.2.1",
     "@semcore/core": "^1",
-    "@semcore/jest-preset-ui": "1.0.0"
+    "@semcore/jest-preset-ui": "1.0.0",
+    "@types/node": "^17.0.45"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
@@ -20,12 +22,13 @@
     "@types/react-dom": "16.8 - 17",
     "classnames": "2.2.6",
     "hoist-non-react-statics": "3.3.2",
-    "nano-css": "5.3.4"
+    "nano-css": "5.3.4",
+    "@types/node": "^17.0.45"
   },
   "peerDependencies": {
+    "@semcore/core": "^1",
     "react": "16.8 - 17",
-    "react-dom": "16.8 - 17",
-    "@semcore/core": "^1"
+    "react-dom": "16.8 - 17"
   },
   "jest": {
     "preset": "@semcore/jest-preset-ui"
