--- a/semcore/widget-empty/package.json
+++ b/semcore/widget-empty/package.json
@@ -9,7 +9,7 @@
   "author": "UI-kit team <ui-kit-team@semrush.com>",
   "license": "MIT",
   "scripts": {
-    "build": "pnpm semcore-builder--source=js",
+    "build": "pnpm semcore-builder --source=js",
     "test": "jest",
     "upload-static": "gcs-upload svg/*.svg"
   },
