--- a/tools/playground/package.json
+++ b/tools/playground/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsm --require=../../.ci/tsm-filter-warnings.js ./esbuild.config.ts",
-    "test": "jest index.test.ts",
-    "build": "echo \"No build\""
+    "test": "jest index.test.ts"
   },
   "author": "",
   "license": "ISC",
@@ -22,9 +21,92 @@
     "react-dom": "17.0.1",
     "react-is": "17.0.1",
     "styled-components": "5.3.5",
-    "tsm": "2.2.2"
+    "tsm": "2.2.2",
+    "@semcore/accordion": "workspace:*",
+    "@semcore/animation": "workspace:*",
+    "@semcore/badge": "workspace:*",
+    "@semcore/base-trigger": "workspace:*",
+    "@semcore/breadcrumbs": "workspace:*",
+    "@semcore/breakpoints": "workspace:*",
+    "@semcore/button": "workspace:*",
+    "@semcore/card": "workspace:*",
+    "@semcore/carousel": "workspace:*",
+    "@semcore/chart": "workspace:*",
+    "@semcore/checkbox": "workspace:*",
+    "@semcore/core": "workspace:*",
+    "@semcore/counter": "workspace:*",
+    "@semcore/d3-chart": "workspace:*",
+    "@semcore/data-table": "workspace:*",
+    "@semcore/date-picker": "workspace:*",
+    "@semcore/divider": "workspace:*",
+    "@semcore/dot": "workspace:*",
+    "@semcore/drag-and-drop": "workspace:*",
+    "@semcore/dropdown": "workspace:*",
+    "@semcore/dropdown-menu": "workspace:*",
+    "@semcore/email": "workspace:*",
+    "@semcore/errors": "workspace:*",
+    "@semcore/feature-popover": "workspace:*",
+    "@semcore/feedback-form": "workspace:*",
+    "@semcore/flags": "workspace:*",
+    "@semcore/flex-box": "workspace:*",
+    "@semcore/format-text": "workspace:*",
+    "@semcore/fullscreen-modal": "workspace:*",
+    "@semcore/grid": "workspace:*",
+    "@semcore/icon": "workspace:*",
+    "@semcore/illustration": "workspace:*",
+    "@semcore/inline-edit": "workspace:*",
+    "@semcore/inline-input": "workspace:*",
+    "@semcore/input": "workspace:*",
+    "@semcore/input-mask": "workspace:*",
+    "@semcore/input-number": "workspace:*",
+    "@semcore/input-tags": "workspace:*",
+    "@semcore/link": "workspace:*",
+    "@semcore/modal": "workspace:*",
+    "@semcore/neighbor-location": "workspace:*",
+    "@semcore/notice": "workspace:*",
+    "@semcore/notice-bubble": "workspace:*",
+    "@semcore/notice-global": "workspace:*",
+    "@semcore/outside-click": "workspace:*",
+    "@semcore/pagination": "workspace:*",
+    "@semcore/pills": "workspace:*",
+    "@semcore/popper": "workspace:*",
+    "@semcore/portal": "workspace:*",
+    "@semcore/product-head": "workspace:*",
+    "@semcore/progress-bar": "workspace:*",
+    "@semcore/project-create": "workspace:*",
+    "@semcore/radio": "workspace:*",
+    "@semcore/scroll-area": "workspace:*",
+    "@semcore/select": "workspace:*",
+    "@semcore/side-panel": "workspace:*",
+    "@semcore/skeleton": "workspace:*",
+    "@semcore/slider": "workspace:*",
+    "@semcore/spin": "workspace:*",
+    "@semcore/spin-container": "workspace:*",
+    "@semcore/sticky": "workspace:*",
+    "@semcore/switch": "workspace:*",
+    "@semcore/tab-line": "workspace:*",
+    "@semcore/tab-panel": "workspace:*",
+    "@semcore/table": "workspace:*",
+    "@semcore/tag": "workspace:*",
+    "@semcore/textarea": "workspace:*",
+    "@semcore/time-picker": "workspace:*",
+    "@semcore/tooltip": "workspace:*",
+    "@semcore/typography": "workspace:*",
+    "@semcore/utils": "workspace:*",
+    "@semcore/widget-empty": "workspace:*",
+    "@semcore/wizard": "workspace:*",
+    "d3-array": "3.1.6",
+    "d3-interpolate": "3.0.1",
+    "d3-scale": "3.3.0",
+    "d3-shape": "3.1.0",
+    "d3-transition": "3.0.1",
+    "d3-selection": "2"
   },
   "devDependencies": {
+    "@types/d3-array": "^3.0.2",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-transition": "^3.0.1",
+    "@types/d3-selection": "2",
     "@semcore/core": "*",
     "@semcore/errors": "*",
     "@semcore/icon": "*",
