--- a/semcore/counter/package.json
+++ b/semcore/counter/package.json
@@ -9,7 +9,7 @@
   "sideEffects": false,
   "license": "MIT",
   "scripts": {
-    "build": "pnpm semcore-builder--source=js",
+    "build": "pnpm semcore-builder --source=js",
     "test": "jest"
   },
   "dependencies": {
