--- a/semcore/errors/package.json
+++ b/semcore/errors/package.json
@@ -14,12 +14,12 @@
     "upload-static": "gcs-upload svg/*.svg"
   },
   "dependencies": {
-    "@semcore/utils": "^3.27",
     "@semcore/button": "^4",
     "@semcore/flex-box": "^4",
     "@semcore/format-text": "^3.0.0",
     "@semcore/illustration": "1.1.2",
-    "@semcore/typography": "^4"
+    "@semcore/typography": "^4",
+    "@semcore/utils": "^3.27"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
@@ -34,6 +34,7 @@
     "directory": "semcore/errors"
   },
   "devDependencies": {
-    "@semcore/jest-preset-ui": "1.0.0"
+    "@semcore/jest-preset-ui": "1.0.0",
+    "@types/node": "^17.0.45"
   }
 }
