--- a/semcore/flex-box/package.json
+++ b/semcore/flex-box/package.json
@@ -9,11 +9,12 @@
   "author": "UI-kit team <ui-kit-team@semrush.com>",
   "license": "MIT",
   "scripts": {
-    "build": "build",
+    "build": "pnpm semcore-builder",
     "test": "jest"
   },
   "dependencies": {
     "@semcore/utils": "^3.15",
+    "classnames": "2.2.6",
     "csstype": "3.0.8"
   },
   "peerDependencies": {
