--- a/semcore/input-mask/package.json
+++ b/semcore/input-mask/package.json
@@ -9,7 +9,7 @@
   "author": "UI-kit team <ui-kit-team@semrush.com>",
   "license": "MIT",
   "scripts": {
-    "build": "build",
+    "build": "pnpm semcore-builder",
     "test": "jest"
   },
   "dependencies": {
