--- a/semcore/utils/tsconfig.json
+++ b/semcore/utils/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src", "lib"]
+  "include": ["src", "lib"],
+  "compilerOptions": {
+    "typeRoots": ["node_modules/@types"]
+  }
 }
