--- a/tools/babel-preset-ui/package.json
+++ b/tools/babel-preset-ui/package.json
@@ -17,6 +17,8 @@
     "@babel/preset-react": "7.12.1",
     "@babel/preset-typescript": "7.12.0",
     "@semcore/babel-plugin-root": "*",
-    "babel-plugin-preval": "3.0.1"
+    "babel-plugin-replace-import-extension": "1.1.3",
+    "babel-plugin-preval": "3.0.1",
+    "@types/node": "^17.0.45"
   }
 }
