[color-picker] Added new component ColorPicker (#323)
* [color-picker] added new component colorPicker

* [docs] color-picker

* [color-picker] added functionality

* [color-picker] fixes and adjustments

* [color-picker] My little refactor 🙈
Signed-off-by: r.lysov <r.lysov@semrush.com>

* [color-picker] fixes

* [color-picker] My little refractory 🦀
Signed-off-by: r.lysov <r.lysov@semrush.com>

* [color-picker] added types and keyboard control

* [color-picker] Add keyboard navigation
Signed-off-by: r.lysov <r.lysov@semrush.com>

* [color-picker] added description of api and types

* [color-picker] added examples

* [color-picker] updated snapshots

* [color-picker] added tests and fixes after design review

* [color-picker] fixed code review comments and docs

* [color-picker] fixed description

* [color-picker] marked as beta

Co-authored-by: Elena Khaas <elena.khaas@semrush.com>
Co-authored-by: r.lysov <r.lysov@semrush.com>

--- a/semcore/color-picker/package.json
+++ b/semcore/color-picker/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "@semcore/{{ dashCase name }}",
-  "description": "Semrush {{ properCase name }} Component",
-  "version": "1.0.0-0",
+  "name": "@semcore/color-picker",
+  "description": "SEMRush ColorPicker Component",
+  "version": "1.0.0",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
   "typings": "lib/types/index.d.ts",
   "sideEffects": false,
-  "author": "UI-KIT team <ui-kit-team@semrush.com>",
+  "author": "UI-kit team <ui-kit-team@semrush.com>",
   "license": "MIT",
   "scripts": {
     "build": "build --source=js",
     "test": "jest"
   },
   "dependencies": {
+    "@semcore/button": "^4",
+    "@semcore/divider": "^3",
+    "@semcore/dropdown": "^3",
+    "@semcore/flex-box": "^4",
+    "@semcore/icon": "^2.19.3",
+    "@semcore/input": "^3.0.0",
+    "@semcore/neighbor-location": "^2",
+    "@semcore/popper": "^4",
     "@semcore/utils": "^3.15"
   },
   "peerDependencies": {
