[d3-chart] cleaned changes

--- a/semcore/d3-chart/tsconfig.json
+++ b/semcore/d3-chart/tsconfig.json
@@ -1,7 +1,4 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src", "lib"],
-  "compilerOptions": {
-    "strict": true
-  }
+  "include": ["src", "lib"]
 }
