[global] Update jest from 24 to 29 version. And update all test for them to pass.
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "@crowdin/cli": "3.7.9",
     "@mailchimp/mailchimp_marketing": "3.0.30",
     "@semcore/theme-redesign": "1.5.12",
-    "@types/jest": "26.0.23",
-    "@types/jest-image-snapshot": "2.11.1",
-    "@types/react": "17.0.19",
+    "@types/jest": "29.0.0",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.10.2",
     "csv": "6.2.0",
@@ -54,7 +52,8 @@
     "eslint-plugin-ssr-friendly": "1.1.0",
     "execa": "6.1.0",
     "husky": "8.0.0",
-    "jest": "26.6.3",
+    "jest": "29.0.1",
+    "jest-environment-jsdom": "29.0.1",
     "lerna": "4.0.0",
     "lint-staged": "10.2.9",
     "picocolors": "1.0.0",
