--- a/semcore/utils/package.json
+++ b/semcore/utils/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@babel/runtime": "^7.17.9",
     "@types/react": "16.8 - 17",
+    "@types/react-dom": "16.8 - 17",
     "classnames": "2.2.6",
     "hoist-non-react-statics": "3.3.2",
     "nano-css": "5.3.4"
