--- a/tools/babel-plugin-react-semcore/package.json
+++ b/tools/babel-plugin-react-semcore/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest index.test.js --no-cache"
+    "test": "jest --no-cache"
   },
   "dependencies": {
     "@semcore/babel-plugin-shadow": "^1.2",
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "babel-plugin-tester": "8.0.1",
-    "jest": "26.6.3"
+    "jest": "29.0.1"
   },
   "jest": {
     "preset": "@semcore/jest-preset-ui"
