--- a/tools/babel-plugin-recharts/package.json
+++ b/tools/babel-plugin-recharts/package.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "test": "jest index.test.js"
+    "test": "jest"
   },
   "devDependencies": {
     "babel-plugin-tester": "7.0.1",
-    "jest": "26.6.3"
+    "jest": "29.0.1"
   },
   "jest": {
     "preset": "@semcore/jest-preset-ui"
