--- a/tools/babel-plugin-shadow/package.json
+++ b/tools/babel-plugin-shadow/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "echo 'no test =('"
+    "test": "jest"
   },
   "dependencies": {
     "@babel/helper-module-imports": "7.0.0",
@@ -35,7 +35,8 @@
     "synchronous-promise": "2.0.9"
   },
   "devDependencies": {
-    "@babel/core": "7.5.5"
+    "@babel/core": "7.5.5",
+    "jest": "29.0.1"
   },
   "jest": {
     "preset": "@semcore/jest-preset-ui"
