--- a/tools/icon-transform-svg/package.json
+++ b/tools/icon-transform-svg/package.json
@@ -18,8 +18,6 @@
     "@babel/plugin-transform-runtime": "7.6.2",
     "@babel/preset-env": "7.7.1",
     "@babel/preset-react": "7.7.0",
-    "jest": "^26.6.3",
-    "jest": "^26.6.3",
     "cheerio": "1.0.0-rc.3",
     "fs-extra": "8.1.0",
     "glob": "7.1.4",
@@ -27,8 +25,9 @@
     "mri": "1.2.0"
   },
   "devDependencies": {
+    "jest": "29.0.1",
     "babel-plugin-tester": "7.0.1",
-    "@semcore/jest-preset-ui": "1.0.0",
+    "@semcore/jest-preset-ui": "*",
     "prettier": "2.6.2"
   },
   "jest": {
